force-app/src/objects/c2g__codaCashMatchingHistory__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcashmatchinghistory</customHelpPage>
    <description>Records the activities that take place during the payment, discounting or writing-off of a payable transaction line.</description>
    <fields>
        <fullName>c2g__AccountOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Account Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AccountValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A cash matching history record will refer to the account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Action__c</fullName>
        <description>The reason for the creation of the record.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Write-off</fullName>
                </value>
                <value>
                    <fullName>Currency Write-off</fullName>
                </value>
                <value>
                    <fullName>Undo Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ArchiveSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Archive Set</label>
        <referenceTo>c2g__ArchiveSet__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DaysToPay__c</fullName>
        <description>Number of days the customer took to pay. This value is used to calculate the Average Days to Pay on the Account object.</description>
        <formula>IF(AND(ISPICKVAL(c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__TransactionType__c, &apos;Invoice&apos;), c2g__AccountOutstandingValue__c == 0), c2g__MatchingDate__c -  c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__TransactionDate__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountDate__c</fullName>
        <label>Discount Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Document Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Document Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Document__c</fullName>
        <description>This field contain the links for the respective matching document number.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; IF(c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__SalesInvoice__c != null, c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__SalesInvoice__c, IF(c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__CashEntry__c != null, c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__CashEntry__c, IF(c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__SalesCreditNote__c != null, c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__SalesCreditNote__c, IF(c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__Journal__c != null, c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__Journal__c, IF(c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__PayableCreditNote__c != null, c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__PayableCreditNote__c, IF(c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__PayableInvoice__c != null, c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__PayableInvoice__c, &quot;&quot;)))))) , c2g__TransactionLineItem__r.c2g__Transaction__r.c2g__DocumentNumber__c )</formula>
        <label>Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DualOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Dual Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__HomeOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Home Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sequential number – the order of creation</description>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__MatchedType__c</fullName>
        <label>Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__MatchingCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matching Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__MatchingDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date when the line was matched in allocation</description>
        <label>Matching Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__MatchingReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference linking matched lines</description>
        <label>Matching Reference</label>
        <referenceTo>c2g__codaMatchingReference__c</referenceTo>
        <relationshipLabel>Cash Matching Histories (Matching Reference)</relationshipLabel>
        <relationshipName>MatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingOutstandingValue__c</fullName>
        <description>The outstanding value used to report to the parent company.</description>
        <label>Reporting Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingValue__c</fullName>
        <description>The value used to report to the parent company.</description>
        <label>Reporting Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A transaction line may have many cash matching history records if its type is account; analysis and tax lines do not have a history</description>
        <label>Transaction Line Item</label>
        <referenceTo>c2g__codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UndoMatchingReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference linking un-matched lines</description>
        <label>Undo Matching Reference</label>
        <referenceTo>c2g__codaMatchingReference__c</referenceTo>
        <relationshipLabel>Cash Matching Histories (Undo Matching Reference)</relationshipLabel>
        <relationshipName>UndoMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UndoReason__c</fullName>
        <description>The reason for matching being undone</description>
        <label>Undo Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Matching Error</fullName>
                </value>
                <value>
                    <fullName>Remittance Advice Incorrect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <formula>c2g__Period__r.c2g__YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffcmutil__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffcmutil__TLIAccValueVsAccount__c</fullName>
        <formula>ABS(c2g__TransactionLineItem__r.c2g__AccountValue__c) -  ABS(c2g__AccountOutstandingValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TLIAccValueVsAccount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__TLIDocValueVsDocument__c</fullName>
        <formula>ABS(c2g__TransactionLineItem__r.c2g__DocumentValue__c) -  ABS(c2g__DocumentOutstandingValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TLIDocValueVsDocument</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__TLIDualValueVsDual__c</fullName>
        <formula>ABS(c2g__TransactionLineItem__r.c2g__DualValue__c) -  ABS(c2g__DualOutstandingValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TLIDualValueVsDual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__TLIHomeValueVsHome__c</fullName>
        <formula>ABS(c2g__TransactionLineItem__r.c2g__HomeValue__c) -  ABS(c2g__HomeOutstandingValue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TLIHomeValueVsHome</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Cash Matching History</label>
    <listViews>
        <fullName>FF_Council_of_International_Schools_Inc_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools, Inc</label>
        <queue>FF_Council_of_International_Schools_Inc</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_codaCashMatchingHistory</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools</label>
        <queue>FF_Council_of_International_Schools</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Cash Matching History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Matching Histories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>